Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1128,7 +1128,7 @@
     "opened": "Abierto",
     "opening-acounting-completed": "Apertura de ejercicio correcta",
     "opening-operation": "Apertura",
-    "operating-system": "Sistema Operativo",
+    "operating-system": "Operační systém",
     "operation": "Operación",
     "operation-export": "Exportní operace",
     "operator": "Operador",
