--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -162,7 +162,7 @@
     "barcode": "Codice a barre",
     "bcc": "CCO",
     "become-sponsor": "Diventa sponsor",
-    "benefit-3-parties": "benefit-3-parties",
+    "benefit-3-parties": "Beneficio a tre parti",
     "big": "grande",
     "billing": "Fatturazione",
     "billing-address": "Indirizzo Di Fatturazione",
