Añadida función de búsqueda secuencial en múltiples secciones para evitar sobrecarga del servidor.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1079,7 +1079,7 @@
     "no-reference": "Bez reference",
     "no-selected-item": "Ningún elemento seleccionado",
     "no-stock": "No controlar stock",
-    "no-updates-now": "No hay actualizaciones en este momento",
+    "no-updates-now": "V tuto chvíli nejsou žádné aktualizace",
     "non-editable-accounting-entry": "Asiento no editable",
     "non-editable-columns": "Columnas no editables: %columns%",
     "non-editable-document": "Documento no editable",
