--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -989,6 +989,7 @@
     "may": "May",
     "media-whatsapp-not-upload": "Error uploading media file to the WhatsApp server: %file%",
     "mega-search": "Mega-Search",
+    "search-in-all-pages": "Search in all pages and sections of the program",
     "memcache": "Memcache",
     "memcache-clear": "Memcache cleared.",
     "memcache-delete-key-item": "Deleted element '%item%' from Memcache.",
@@ -1653,7 +1654,7 @@
     "tuesday": "Tuesday",
     "two-factor-auth": "2-step authentication",
     "two-factor-auth-disable": "Disable two-factor authentication",
-    "two-factor-auth-disabled": "Two-factor authentication disabled",
+    "two-factor-auth-disabled": "Two-factor authentication is disabled",
     "two-factor-auth-enable": "Enable two-factor authentication",
     "two-factor-auth-enabled": "Two-factor authentication enabled.",
     "two-factor-auth-p": "Set up the Google Authenticator app using the QR code, enter the code here, and click verify to complete the activation process.",
@@ -1698,7 +1699,7 @@
     "updater": "Updater",
     "updates-available": "Updates Available",
     "updates-available-p": "There are updates available for FacturaScripts. Please click on the updater and download the new version. Updates fix bugs and add new features.",
-    "updates-beta-warning": "Beta updates enabled",
+    "updates-beta-warning": "Beta updates are enabled",
     "updates-beta-warning-p": "⚠️ Beta updates are enabled. These updates have not been tested and are only recommended for test installations.",
     "updating-attached-relations": "Updating attached file counters",
     "upload-file": "Upload file",
