--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -585,7 +585,7 @@
     "es-tax-exception-e4": "Hiszpania: wyjątek na mocy artykułu 23 i 24 ustawy o VAT",
     "es-tax-exception-e5": "Hiszpania: wyjątek na podstawie artykułu 25 ustawy o VAT",
     "es-tax-exception-e6": "Hiszpania: wyjątek z innej przyczyny",
-    "es-tax-exception-location-rules": "es-tax-exception-location-rules",
+    "es-tax-exception-location-rules": "Hiszpania: N2 Niepodlegające opodatkowaniu – Zasady ustalania miejsca świadczenia usług (art. 69–70 LIVA, usługi B2B w UE lub poza UE)",
     "es-tax-exception-passive-subject": "Wyjątek podatkowy (podmiot bierny)",
     "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
     "es-tax-regime-cash-criteria": "Criterio de caja",
@@ -807,7 +807,7 @@
     "installation": "Instalacja",
     "installed": "Zainstalowane",
     "installed-plugins": "Zainstalowane",
-    "installer": "Instalador",
+    "installer": "Instalator",
     "installer-p": "Witamy w instalatorze FacturaScripts. Wypełnij wymagane pola, aby połączyć się z bazą danych.",
     "installer-requirements": "Następujące rozszerzenia i funkcje są wymagane w FacturaScripts:",
     "integrity-check": "Kontrola integralności",
@@ -1388,7 +1388,7 @@
     "roles": "Role",
     "rules": "Zasady",
     "run": "Uruchom",
-    "running": "Ejecutando",
+    "running": "Działa",
     "running-plugin-cron": "Uruchamianie cron wtyczki %pluginName%",
     "running-work-queue": "Uruchamianie kolejki zadań",
     "sales": "Sprzedaż",
