Añadido mensaje de alerta para mostrar cuando no se encuentran resultados en la búsqueda.

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -989,7 +989,6 @@
     "may": "May",
     "media-whatsapp-not-upload": "Error uploading media file to the WhatsApp server: %file%",
     "mega-search": "Mega-Search",
-    "search-in-all-pages": "Search in all pages and sections of the program",
     "memcache": "Memcache",
     "memcache-clear": "Memcache cleared.",
     "memcache-delete-key-item": "Deleted element '%item%' from Memcache.",
@@ -1078,6 +1077,7 @@
     "no-plugins-installed": "No plugins installed",
     "no-print-permission": "You do not have permission to print or export",
     "no-reference": "No reference",
+    "no-results-found": "No se han encontrado resultados",
     "no-selected-item": "No selected item",
     "no-stock": "Do not control stock",
     "no-updates-now": "No updates at this time.",
