--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -989,7 +989,6 @@
     "may": "Mayo",
     "media-whatsapp-not-upload": "Error al subir el archivo multimedia al servidor de WhatsApp: %file%",
     "mega-search": "MegaBuscador",
-    "search-in-all-pages": "Busca en todas las páginas y secciones del programa",
     "memcache": "Memcache",
     "memcache-clear": "Memcache limpiada.",
     "memcache-delete-key-item": "Eliminado elemento '%item%' de Memcache.",
@@ -1078,6 +1077,7 @@
     "no-plugins-installed": "No hay plugins instalados",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
     "no-reference": "Sin referencia",
+    "no-results-found": "No se han encontrado resultados",
     "no-selected-item": "Ningún elemento seleccionado",
     "no-stock": "No controlar stock",
     "no-updates-now": "No hay actualizaciones en este momento",
