--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1077,6 +1077,7 @@
     "no-plugins-installed": "Pluginik ez daude instaladoak",
     "no-print-permission": "Ez duzu inprimatzeko edo esportatzeko baimenik",
     "no-reference": "Erreferentziarik gabe",
+    "no-results-found": "No se han encontrado resultados",
     "no-selected-item": "Ez da elementurik aukeratu",
     "no-stock": "Stocka ez kontrolatu",
     "no-updates-now": "Une honetan ez dago eguneratzerik",
