--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1077,6 +1077,7 @@
     "no-plugins-installed": "Aucun plugin installé",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
     "no-reference": "Pas de référence",
+    "no-results-found": "No se han encontrado resultados",
     "no-selected-item": "Aucun élément sélectionné",
     "no-stock": "Ne pas contrôler le stock",
     "no-updates-now": "Pas de mises à jour pour le moment",
