--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1077,6 +1077,7 @@
     "no-plugins-installed": "Non hai plugins instalados",
     "no-print-permission": "Non ten permiso para imprimir ou exportar",
     "no-reference": "Sen referencia",
+    "no-results-found": "No se han encontrado resultados",
     "no-selected-item": "Ningún elemento seleccionado",
     "no-stock": "Non controlar stock",
     "no-updates-now": "Non hai actualizacións neste momento",
