--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1077,6 +1077,7 @@
     "no-plugins-installed": "Brak zainstalowanych wtyczek",
     "no-print-permission": "Nie masz uprawnień do drukowania lub eksportowania",
     "no-reference": "Brak odniesienia",
+    "no-results-found": "No se han encontrado resultados",
     "no-selected-item": "Nie wybrano żadnego elementu",
     "no-stock": "Brak kontrolowania zapasów",
     "no-updates-now": "Brak aktualizacji w tej chwili",
