--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1077,6 +1077,7 @@
     "no-plugins-installed": "Não há plugins instalados",
     "no-print-permission": "Sem permissão para imprimir ou exportar",
     "no-reference": "Sem referência",
+    "no-results-found": "No se han encontrado resultados",
     "no-selected-item": "Nenhum item selecionado",
     "no-stock": "Sem controle de estoque",
     "no-updates-now": "Não há atualizações neste momento",
