--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1077,6 +1077,7 @@
     "no-plugins-installed": "No hi ha plugins instal·lats",
     "no-print-permission": "No té permís per imprimir o exportar",
     "no-reference": "Sense referència",
+    "no-results-found": "No se han encontrado resultados",
     "no-selected-item": "No hi ha cap element seleccionat",
     "no-stock": "No hi ha estoc",
     "no-updates-now": "No hi ha actualitzacions en aquest moment",
