--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1077,6 +1077,7 @@
     "no-plugins-installed": "Es sind keine Plugins installiert",
     "no-print-permission": "Sie haben keine Berechtigung zum Drucken oder Exportieren.",
     "no-reference": "Keine Referenz",
+    "no-results-found": "No se han encontrado resultados",
     "no-selected-item": "Keine Elemente ausgewählt",
     "no-stock": "Kein Bestand",
     "no-updates-now": "Es gibt derzeit keine Updates.",
