--- a/Core/Translation/es_PA.json
+++ b/Core/Translation/es_PA.json
@@ -1077,6 +1077,7 @@
     "no-plugins-installed": "No hay plugins instalados",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
     "no-reference": "Sin referencia",
+    "no-results-found": "No se han encontrado resultados",
     "no-selected-item": "Ningún elemento seleccionado",
     "no-stock": "No controlar stock",
     "no-updates-now": "No hay actualizaciones en este momento",
