--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1404,6 +1404,7 @@
     "sdk": "SDK",
     "search": "Suche",
     "search-document": "Geben Sie die Nummer von %doctype% ein, um zu suchen.",
+    "search-in-all-pages": "Busca en todas las páginas del programa",
     "search-message": "Nachricht suchen",
     "search-product": "Produkt suchen",
     "second-hand": "Z",
