--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1077,7 +1077,7 @@
     "no-plugins-installed": "No plugins installed",
     "no-print-permission": "You do not have permission to print or export",
     "no-reference": "No reference",
-    "no-results-found": "No se han encontrado resultados",
+    "no-results-found": "No results found",
     "no-selected-item": "No selected item",
     "no-stock": "Do not control stock",
     "no-updates-now": "No updates at this time.",
@@ -1404,6 +1404,7 @@
     "sdk": "SDK",
     "search": "Search",
     "search-document": "Type the number of %doctype% to search.",
+    "search-in-all-pages": "Busca en todas las páginas del programa",
     "search-message": "Search message",
     "search-product": "Search product",
     "second-hand": "Second hand",
