--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1404,6 +1404,7 @@
     "sdk": "SDK",
     "search": "Bilatu",
     "search-document": "Idatzi bilaketa egiteko %doctype% kopurua.",
+    "search-in-all-pages": "Busca en todas las páginas del programa",
     "search-message": "Bilatu mezua",
     "search-product": "Produktua bilatu",
     "second-hand": "Bigarren eskukoa",
