--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1077,7 +1077,7 @@
     "no-plugins-installed": "Non hai plugins instalados",
     "no-print-permission": "Non ten permiso para imprimir ou exportar",
     "no-reference": "Sen referencia",
-    "no-results-found": "No se han encontrado resultados",
+    "no-results-found": "Non se atoparon resultados",
     "no-selected-item": "Ningún elemento seleccionado",
     "no-stock": "Non controlar stock",
     "no-updates-now": "Non hai actualizacións neste momento",
@@ -1404,6 +1404,7 @@
     "sdk": "SDK",
     "search": "Busca",
     "search-document": "Escribe el número de %doctype% para buscar.",
+    "search-in-all-pages": "Busca en todas las páginas del programa",
     "search-message": "Procurar mensaxe",
     "search-product": "Buscar produto",
     "second-hand": "Segunda man",
