--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -230,7 +230,7 @@
     "center": "Centrum",
     "certificate": "Certyfikat",
     "change": "Zmień",
-    "change-password-online-warning": "Jeśli ta instalacja ma być online, powinieneś zmienić hasło na bardziej bezpieczne.",
+    "change-password-online-warning": "Jeśli ta instalacja ma być online, należy zmienić hasło na bezpieczniejsze.",
     "channel": "Kanał",
     "charge": "Pobierać",
     "charge-date": "Data obciążenia",
@@ -1404,6 +1404,7 @@
     "sdk": "SDK",
     "search": "Szukaj",
     "search-document": "Wpisz numer %doctype%, aby wyszukać.",
+    "search-in-all-pages": "Busca en todas las páginas del programa",
     "search-message": "Szukaj wiadomości",
     "search-product": "Szukaj produktu",
     "second-hand": "Używane",
