--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1404,6 +1404,7 @@
     "sdk": "SDK",
     "search": "Pesquisar",
     "search-document": "Digite o número do %doctype% para pesquisar.",
+    "search-in-all-pages": "Busca en todas las páginas del programa",
     "search-message": "Buscar mensagem",
     "search-product": "Buscar produto",
     "second-hand": "Segunda mão",
