Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1077,7 +1077,7 @@
     "no-plugins-installed": "No hi ha plugins instal·lats",
     "no-print-permission": "No teniu permís per imprimir o exportar",
     "no-reference": "Sense referència",
-    "no-results-found": "No se han encontrado resultados",
+    "no-results-found": "No s'han trobat resultats",
     "no-selected-item": "Cap element seleccionat",
     "no-stock": "No controlar stock",
     "no-updates-now": "No hi ha actualitzacions en aquest moment",
@@ -1404,7 +1404,7 @@
     "sdk": "SDK",
     "search": "Cercar",
     "search-document": "Escriu el número de %doctype% per cercar.",
-    "search-in-all-pages": "Busca en todas las páginas del programa",
+    "search-in-all-pages": "Cerca a totes les pàgines del programa",
     "search-message": "Buscar missatge",
     "search-product": "Cercar producte",
     "second-hand": "Segona mà",
