--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1404,7 +1404,7 @@
     "sdk": "SDK",
     "search": "Search",
     "search-document": "Type the number of %doctype% to search.",
-    "search-in-all-pages": "Busca en todas las páginas del programa",
+    "search-in-all-pages": "Search across all pages of the program",
     "search-message": "Search message",
     "search-product": "Search product",
     "second-hand": "Second hand",
