Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -114,6 +114,7 @@
     "app-storage": "Emmagatzematge.",
     "applied-tax": "Impost aplicat",
     "apply": "Aplicar",
+    "apply-to": "Aplicar a",
     "approve": "Aprovar",
     "approve-document": "Aprovar document",
     "approve-document-same-date": "Aprovar document en la mateixa data",
@@ -586,6 +587,8 @@
     "es-tax-exception-e5": "Espanya: excepció per l'article 25 de la Llei de l'IVA",
     "es-tax-exception-e6": "Espanya: excepció per una altra causa",
     "es-tax-exception-location-rules": "excepció fiscal per normes de localització",
+    "es-tax-exception-n1": "es-tax-exception-n1",
+    "es-tax-exception-n5": "es-tax-exception-n5",
     "es-tax-exception-passive-subject": "excepció fiscal subjecte passiu",
     "es-tax-regime-agrarian": "Règim especial de l'agricultura, la ramaderia i la pesca",
     "es-tax-regime-cash-criteria": "Criteri de caixa",
