--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -114,6 +114,7 @@
     "app-storage": "Úložiště",
     "applied-tax": "Impuesto aplicado",
     "apply": "Aplicar",
+    "apply-to": "Použít na",
     "approve": "Aprobar",
     "approve-document": "Aprobar documento",
     "approve-document-same-date": "Aprobar documento en la misma fecha",
@@ -586,6 +587,8 @@
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
     "es-tax-exception-e6": "España: excepción por otra causa",
     "es-tax-exception-location-rules": "Španělsko: N2 Nepodléhá dani – Pravidla lokalizace služeb (články 69–70 LIVA, služby B2B v EU nebo mimo EU)",
+    "es-tax-exception-n1": "es-tax-exception-n1",
+    "es-tax-exception-n5": "es-tax-exception-n5",
     "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
     "es-tax-regime-agrarian": "Zvláštní režim zemědělství, chovu zvířat a rybolovu",
     "es-tax-regime-cash-criteria": "Hotovostní kritéria",
