--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -114,6 +114,7 @@
     "app-storage": "Storage",
     "applied-tax": "Applied tax",
     "apply": "Apply",
+    "apply-to": "Apply to",
     "approve": "Approve",
     "approve-document": "Approve document",
     "approve-document-same-date": "Approve document on the same date",
@@ -586,6 +587,8 @@
     "es-tax-exception-e5": "Spain: exception by article 25 of the VAT Law",
     "es-tax-exception-e6": "Spain: exception for another reason",
     "es-tax-exception-location-rules": "es-tax-exception-location-rules.",
+    "es-tax-exception-n1": "ES Tax Exception N1",
+    "es-tax-exception-n5": "es-tax-exception-n5",
     "es-tax-exception-passive-subject": "Tax exception for passive subject",
     "es-tax-regime-agrarian": "Special regime for agriculture, livestock and fisheries",
     "es-tax-regime-cash-criteria": "Cash criteria",
