--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -114,6 +114,7 @@
     "app-storage": "Almacenamiento",
     "applied-tax": "Impuesto aplicado",
     "apply": "Aplicar",
+    "apply-to": "Aplicar a",
     "approve": "Aprobar",
     "approve-document": "Aprobar documento",
     "approve-document-same-date": "Aprobar documento en la misma fecha",
@@ -586,6 +587,8 @@
     "es-tax-exception-e5": "España: excepción por el artículo 25 LIVA Entregas intracomunitarias de bienes",
     "es-tax-exception-e6": "España: otras exenciones (oro de inversión, regímenes especiales, etc.)",
     "es-tax-exception-location-rules": "España: N2 No sujeta – Reglas de localización de servicios (arts. 69–70 LIVA, servicios B2B UE o fuera UE)",
+    "es-tax-exception-n1": "es-tax-exception-n1",
+    "es-tax-exception-n5": "es-tax-exception-n5",
     "es-tax-exception-passive-subject": "España: N6 Inversión del sujeto pasivo (art. 84 LIVA)",
     "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
     "es-tax-regime-cash-criteria": "Criterio de caja",
