--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -114,6 +114,7 @@
     "app-storage": "Biltegiratzea",
     "applied-tax": "Aplikatutako zerga",
     "apply": "Aplikatu",
+    "apply-to": "Aplikatu honi",
     "approve": "Onartu",
     "approve-document": "Dokumentua onartu",
     "approve-document-same-date": "Data berean onartu dokumentua",
@@ -586,6 +587,8 @@
     "es-tax-exception-e5": "Espainia: BEZaren 25. legearen artikuluaren salbuespena",
     "es-tax-exception-e6": "Espainia: beste arrazoi bategatik salbuespena",
     "es-tax-exception-location-rules": "es-tax-exception-location-rules",
+    "es-tax-exception-n1": "es-tax-exception-n1",
+    "es-tax-exception-n5": "es-tax-exception-n5",
     "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
     "es-tax-regime-agrarian": "Nekazaritza, abeltzaintza eta arrantzaren araubide berezia",
     "es-tax-regime-cash-criteria": "Diru-irizpideak",
