--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -114,6 +114,7 @@
     "app-storage": "Almacenamento",
     "applied-tax": "imposto aplicado",
     "apply": "Aplicar",
+    "apply-to": "Aplicar a",
     "approve": "Aprobar",
     "approve-document": "Aprobar documento",
     "approve-document-same-date": "Aprobar documento na mesma data",
@@ -586,6 +587,8 @@
     "es-tax-exception-e5": "España: excepción polo artigo 25 da Ley do IVE",
     "es-tax-exception-e6": "España: excepción por outra causa",
     "es-tax-exception-location-rules": "normas de localización de excepcións fiscais",
+    "es-tax-exception-n1": "es-tax-exception-n1",
+    "es-tax-exception-n5": "es-tax-exception-n5",
     "es-tax-exception-passive-subject": "excepción fiscal suxeito pasivo",
     "es-tax-regime-agrarian": "Rexime especial da agricultura, gandería e pesca",
     "es-tax-regime-cash-criteria": "Criterio de caixa",
