--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -114,6 +114,7 @@
     "app-storage": "Archiviazione",
     "applied-tax": "imposta applicata",
     "apply": "Applica",
+    "apply-to": "Applicare a",
     "approve": "Approvare",
     "approve-document": "Approvare documento",
     "approve-document-same-date": "approva-documento-stessa-data",
@@ -586,6 +587,8 @@
     "es-tax-exception-e5": "Spagna: eccezione per l'articolo 25 della legge sull'IVA",
     "es-tax-exception-e6": "Spagna: eccezione per altro motivo",
     "es-tax-exception-location-rules": "regole di eccezione fiscale per posizione",
+    "es-tax-exception-n1": "es-tax-exception-n1",
+    "es-tax-exception-n5": "es-tax-exception-n5",
     "es-tax-exception-passive-subject": "Spagna: N6 inversione del soggetto passivo (art. 84 LIVA)",
     "es-tax-regime-agrarian": "Regime speciale dell'agricoltura, dell'allevamento e della pesca",
     "es-tax-regime-cash-criteria": "Criterio di cassa",
@@ -1414,7 +1417,7 @@
     "select": "Seleziona",
     "select-all": "Seleziona tutto",
     "select-content-for": "Seleziona contenuto per %content%",
-    "select-file-to-add": "Puedes añadir un archivo desde aquí, seleccionalo y súbelo desde tu computador. Pulsa el botón ninguno si lo que quieres es seleccionar ninguno.",
+    "select-file-to-add": "Puoi aggiungere un file da qui: selezionalo e caricalo dal tuo computer. Premi il pulsante \"nessuno\" se vuoi non selezionare alcun file.",
     "select-none": "Seleziona nessuno",
     "select-plugin-zip-file": "Seleziona il file zip del plugin:",
     "select-user": "Seleziona Utente",
