--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -114,6 +114,7 @@
     "app-storage": "Przechowywanie",
     "applied-tax": "Zastosowany podatek",
     "apply": "Aplicar",
+    "apply-to": "Zastosuj do",
     "approve": "Zatwierdź",
     "approve-document": "Zatwierdź dokument",
     "approve-document-same-date": "Zatwierdź dokument w tym samym dniu",
@@ -586,6 +587,8 @@
     "es-tax-exception-e5": "Hiszpania: wyjątek na podstawie artykułu 25 ustawy o VAT",
     "es-tax-exception-e6": "Hiszpania: wyjątek z innej przyczyny",
     "es-tax-exception-location-rules": "Hiszpania: N2 Niepodlegające opodatkowaniu – Zasady ustalania miejsca świadczenia usług (art. 69–70 LIVA, usługi B2B w UE lub poza UE)",
+    "es-tax-exception-n1": "es-tax-exception-n1",
+    "es-tax-exception-n5": "es-tax-exception-n5",
     "es-tax-exception-passive-subject": "Wyjątek podatkowy (podmiot bierny)",
     "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
     "es-tax-regime-cash-criteria": "Criterio de caja",
