--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -114,6 +114,7 @@
     "app-storage": "Armazenamento",
     "applied-tax": "imposto aplicado",
     "apply": "Aplicar",
+    "apply-to": "Aplicar a",
     "approve": "Aprovar",
     "approve-document": "aprovar documento",
     "approve-document-same-date": "Aprovar documento na mesma data",
@@ -586,6 +587,8 @@
     "es-tax-exception-e5": "Espanha: exceção pelo artigo 25 da Lei do IVA",
     "es-tax-exception-e6": "E",
     "es-tax-exception-location-rules": "Espanha: N2 Não sujeita – Regras de localização de serviços (arts. 69–70 LIVA, serviços B2B UE ou fora da UE)",
+    "es-tax-exception-n1": "es-tax-exception-n1",
+    "es-tax-exception-n5": "es-tax-exception-n5",
     "es-tax-exception-passive-subject": "Exceção fiscal - sujeito passivo",
     "es-tax-regime-agrarian": "R",
     "es-tax-regime-cash-criteria": "Criterio de caixa",
