--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -114,6 +114,7 @@
     "app-storage": "Speicher",
     "applied-tax": "angewandte Steuer",
     "apply": "Anwenden",
+    "apply-to": "Anwenden auf.",
     "approve": "Genehmigen",
     "approve-document": "Dokument genehmigen",
     "approve-document-same-date": "Dokument zum gleichen Datum genehmigen",
@@ -586,6 +587,8 @@
     "es-tax-exception-e5": "Spanien: Ausnahme nach Artikel 25 des Umsatzsteuergesetzes",
     "es-tax-exception-e6": "Spanien: Steuerausnahme aus einem anderen Grund",
     "es-tax-exception-location-rules": "Spanien: N2 Nicht steuerbar – Regeln zur Ortsbestimmung von Dienstleistungen (Art. 69–70 LIVA, B2B‑Dienstleistungen innerhalb oder außerhalb der EU)",
+    "es-tax-exception-n1": "es-tax-exception-n1",
+    "es-tax-exception-n5": "es-tax-exception-n5",
     "es-tax-exception-passive-subject": "Spanien: N6 Umkehr der Steuerschuldnerschaft (Art. 84 LIVA)",
     "es-tax-regime-agrarian": "Besonderes Regime der Landwirtschaft, Viehzucht und Fischerei",
     "es-tax-regime-cash-criteria": "K",
