--- a/Core/Translation/es_CR.json
+++ b/Core/Translation/es_CR.json
@@ -114,6 +114,7 @@
     "app-storage": "Almacenamiento",
     "applied-tax": "Impuesto aplicado",
     "apply": "Aplicar",
+    "apply-to": "Aplicar a",
     "approve": "Aprobar",
     "approve-document": "Aprobar documento",
     "approve-document-same-date": "Aprobar documento en la misma fecha",
@@ -586,6 +587,8 @@
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
     "es-tax-exception-e6": "España: excepción por otra causa",
     "es-tax-exception-location-rules": "es-tax-exception-location-rules",
+    "es-tax-exception-n1": "es-tax-exception-n1",
+    "es-tax-exception-n5": "es-tax-exception-n5",
     "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
     "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
     "es-tax-regime-cash-criteria": "Criterio de caja",
