--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -114,6 +114,7 @@
     "app-storage": "Stockage",
     "applied-tax": "Taxe appliquée",
     "apply": "Appliquer",
+    "apply-to": "Appliquer à",
     "approve": "Approuver",
     "approve-document": "Approuver le document",
     "approve-document-same-date": "Approuver le document de la même date",
@@ -586,6 +587,8 @@
     "es-tax-exception-e5": "Espagne: exception pour l'article 25 de la loi sur la TVA",
     "es-tax-exception-e6": "Espagne: exception pour une autre raison",
     "es-tax-exception-location-rules": "règles d'exception fiscales espagnoles",
+    "es-tax-exception-n1": "es-tax-exception-n1",
+    "es-tax-exception-n5": "es-tax-exception-n5",
     "es-tax-exception-passive-subject": "sujet passif d'exception fiscale",
     "es-tax-regime-agrarian": "Régime spécial de l'agriculture, de l'élevage et de la pêche",
     "es-tax-regime-cash-criteria": "Critère de caisse",
