Añadido soporte para el tipo de motor de base de datos y actualizado el archivo About para mostrar la información de la base de datos.

--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -578,7 +578,7 @@
     "error-write-cert": "Error al escribir el certificado",
     "errors": "Błędy",
     "es_EC": "Hiszpański (Ekwador)",
-    "es-tax-exception-art-14": "es-tax-exception-art-14",
+    "es-tax-exception-art-14": "Hiszpania: N4 Niepodlegające opodatkowaniu (art. 14 LIVA) – operacje związane z eksportem",
     "es-tax-exception-art-7": "wyjątek podatkowy ES - art. 7",
     "es-tax-exception-e1": "Hiszpania: wyjątek na mocy artykułu 20 ustawy o VAT",
     "es-tax-exception-e2": "Hiszpania: wyjątek na mocy artykułu 21 ustawy o VAT",
@@ -1134,7 +1134,7 @@
     "opening-operation": "Otwarcie",
     "operating-system": "System operacyjny",
     "operation": "Operacja",
-    "operation-export": "Operación exportación",
+    "operation-export": "Operacja eksportu",
     "operator": "Operator",
     "option": "Opcja",
     "optional": "opcjonalny",
