Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -600,8 +600,8 @@
     "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
     "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
     "es-tax-regime-simplified": "Vereinfachtes Regime",
-    "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
-    "es-tax-regime-special-small-business": "es-tax-regime-special-small-business",
+    "es-tax-regime-special-retail-traders": "Spanisches Steuerregime – Sonderregel für Einzelhändler",
+    "es-tax-regime-special-small-business": "Spanisches Steuerregime – Sonderregel für Kleinunternehmen",
     "es-tax-regime-surcharge": "Spanische Sonderregelung",
     "es-tax-regime-telecom": "Besondere Regime für Telekommunikations-, Rundfunk- oder Fernsehdienste und für elektronische Dienstleistungen",
     "es-tax-regime-travel": "Besonderes Regime der Reisebüros",
